--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,16 +31,20 @@
 
 [[constraint]]
   name = "k8s.io/api"
-  version = "kubernetes-1.11.0"
+  branch = "release-1.11"
 
 [[constraint]]
   name = "k8s.io/apimachinery"
-  version = "kubernetes-1.11.0"
+  branch = "release-1.11"
 
 [[constraint]]
   name = "k8s.io/client-go"
-  version = "8.0.0"
+  branch = "release-8.0"
 
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/vapor-ware/ksync"
+  version = "0.3.2"
