create a release workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run: go test -v ./...
       - run: go fmt ./...
       - run: go vet ./...
-      - run: go build -o bin/cnd
+      - run: make
 
       - persist_to_workspace:
           root: .
@@ -26,3 +26,33 @@ jobs:
       - store_artifacts:
           path: bin
           destination: binaries
+  
+  publish-github-release:
+    docker:
+      - image: cibuilds/github:0.10
+    steps:
+      - attach_workspace:
+          at: ./binaries
+      - run:
+          name: "Publish Release on GitHub"
+          command: |
+            ls -la
+            VERSION=$(cnd --version)
+            ghr -t ${GITHUB_TOKEN} -u okteto -r cnd -c ${CIRCLE_SHA1} -delete ${VERSION} ./binaries/
+workflows:
+  version: 2
+  build-release:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /.*/
+      - publish-github-release:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^\d+\.\d+\.\d+$/
+            branches:
+              ignore: /.*/
+      
