--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,9 +36,9 @@ jobs:
       - run:
           name: "Publish Release on GitHub"
           command: |
-            ls -la
-            VERSION=$(cnd --version)
-            ghr -t ${GITHUB_TOKEN} -u okteto -r cnd -c ${CIRCLE_SHA1} -delete ${VERSION} ./binaries/
+            ls -la binaries
+            VERSION=$(binaries/cnd --version)
+            ghr -u okteto -r cnd -c ${CIRCLE_SHA1} -token ${GITHUB_TOKEN} -replace $VERSION  ./binaries/
 workflows:
   version: 2
   build-release:
