--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,9 +36,7 @@ jobs:
       - run:
           name: "Publish Release on GitHub"
           command: |
-            ls -la artifacts/bin
-            VERSION=$(artifacts/bin/cnd --version)
-            ghr -u okteto -r cnd -c ${CIRCLE_SHA1} -token ${GITHUB_TOKEN} -replace $VERSION  ./artifacts/bin/
+            ghr -u okteto -r cnd -c ${CIRCLE_SHA1} -token ${GITHUB_TOKEN} -replace $CIRCLE_TAG  ./artifacts/bin/
 workflows:
   version: 2
   build-release:
