--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run: go test -v ./...
       - run: go fmt ./...
       - run: go vet ./...
-      - run: env VERSION_STRING=$CIRCLE_TAG make release
+      - run: env VERSION_STRING=$CIRCLE_TAG make build-all
 
       - persist_to_workspace:
           root: .
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: "Publish Release on GitHub"
           command: |
-            ghr -u okteto -r cnd -c ${CIRCLE_SHA1} -token ${GITHUB_TOKEN} -replace $CIRCLE_TAG  ./artifacts/bin/
+            ghr -u okteto -r cnd -c ${CIRCLE_SHA1} -token ${GITHUB_TOKEN} -replace -prerelease $CIRCLE_TAG  ./artifacts/bin/
 workflows:
   version: 2
   build-release:
