build in parallel

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run: go test -v ./...
       - run: go fmt ./...
       - run: go vet ./...
-      - run: env VERSION_STRING=$CIRCLE_TAG make build-all
+      - run: env VERSION_STRING=$CIRCLE_TAG make -j 3 build-all
 
       - persist_to_workspace:
           root: .
