--- a/sample/cnd.yml
+++ b/sample/cnd.yml
@@ -1,11 +1,8 @@
-name: cnd-test
 swap:
   deployment:
-    file: ./sample/k8/nginx-deployment.yml
+    name: nginx
     container: nginx
     image: pchico83/dev
-  service:
-    file: ./sample/k8/nginx-service.yml
 mount:
   source: /Users/pablo/go/src/github.com/okteto/cnd
   target: /test
