--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,11 @@ jobs:
           name: "Publish Release on GitHub"
           command: |
             ghr -u okteto -r cnd -c ${CIRCLE_SHA1} -token ${GITHUB_TOKEN} -replace -prerelease $CIRCLE_TAG  ./artifacts/bin/
+      - deploy:
+          name: "Update brew formula to ${CIRCLE_TAG}"
+          command: |
+            ./update_homebrew_formula.sh ${CIRCLE_TAG} $(awk {'print $1'} ./artifacts/bin/okteto-darwin-amd64.sha256)
+
 workflows:
   version: 2
   build-release:
