--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,11 @@ jobs:
           name: "Publish Release on GitHub"
           command: |
             ghr -u okteto -r cnd -c ${CIRCLE_SHA1} -token ${GITHUB_TOKEN} -replace -prerelease $CIRCLE_TAG  ./artifacts/bin/
+      - checkout
       - deploy:
           name: "Update brew formula to ${CIRCLE_TAG}"
           command: |
-            ./update_homebrew_formula.sh ${CIRCLE_TAG} $(awk {'print $1'} ./artifacts/bin/okteto-darwin-amd64.sha256)
+            ./update_homebrew_formula.sh ${CIRCLE_TAG} $(awk {'print $1'} ./artifacts/bin/okteto-darwin-amd64.sha256) $GITHUB_TOKEN
 
 workflows:
   version: 2
