Add create command to generate default cnd.yml

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
 	"tasks": [
 		{
 			"label": "build",
-			"command": "go build -o /usr/local/bin/cnd",
+			"command": "make build",
 			"group": {
 				"kind": "build",
 				"isDefault": true
