Fix CODEOWNERS file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,6 +4,4 @@
 *       @okteto
 * See https://blog.github.com/2017-07-06-introducing-code-owners/ for details
 
-*       @pchico83
-*       @rberrelleza
-*       @rlamana
+*       @pchico83 @rberrelleza @rlamana
