--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,4 @@
 # Lines starting with '#' are comments.
 # Each line is a file pattern followed by one or more owners.
-# These owners will be the default owners for everything in the repo.
-*       @okteto
-* See https://blog.github.com/2017-07-06-introducing-code-owners/ for details
-
+# See https://blog.github.com/2017-07-06-introducing-code-owners/ for details
 *       @pchico83 @rberrelleza @rlamana
