Support for multiple "cnd up" to different containers on the same pod

--- a/images/syncthing/Dockerfile
+++ b/images/syncthing/Dockerfile
@@ -1,4 +1,4 @@
-FROM syncthing/syncthing:v0.14.51
+FROM syncthing/syncthing:v1.0.0
 
 ENV HOME /var/syncthing
 
@@ -6,5 +6,8 @@ COPY config.xml /var/syncthing/config/config.xml
 COPY key.pem /var/syncthing/config/key.pem
 COPY cert.pem /var/syncthing/config/cert.pem
 
-ENTRYPOINT /bin/syncthing -home /var/syncthing/config -gui-address 0.0.0.0:8384
+COPY run.sh .
+
+ENTRYPOINT ./run.sh
+
 
