Undo manifest changes

--- a/examples/vote-kubectl/vote/cnd.yml
+++ b/examples/vote-kubectl/vote/cnd.yml
@@ -2,11 +2,7 @@ swap:
   deployment:
     name: vote
     container: vote
-    #command: ["python", "app.py"]
-    command: 
-    - sh
-    - -c
-    - tail -f /dev/null 
+    command: ["python", "app.py"]
 mount:
   source: .
   target: /app
