--- a/frontend/package.json
+++ b/frontend/package.json
@@ -76,7 +76,6 @@
     "react-collapse": "^4.0.3",
     "react-dom": "^16.6.0",
     "react-favicon": "^0.0.14",
-    "react-google-login": "^3.2.0",
     "react-hot-loader": "4.3.11",
     "react-moment": "0.8.1",
     "react-motion": "^0.5.2",
@@ -90,6 +89,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "smoothscroll-polyfill": "^0.4.3",
+    "socket.io-client": "^2.2.0",
     "webpack-merge": "4.1.4",
     "whatwg-fetch": "3.0.0"
   }
