--- a/chart/okteto/templates/service-api.yaml
+++ b/chart/okteto/templates/service-api.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ include "okteto.fullname" . }}-api"
+  name: api
   labels:
     app.kubernetes.io/name: "{{ include "okteto.fullname" . }}-api"
     helm.sh/chart: {{ include "okteto.chart" . }}
