--- a/chart/okteto/templates/service-frontend.yaml
+++ b/chart/okteto/templates/service-frontend.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ include "okteto.fullname" . }}-frontend"
+  name: frontend
   labels:
     app.kubernetes.io/name: "{{ include "okteto.fullname" . }}-frontend"
     helm.sh/chart: {{ include "okteto.chart" . }}
