Run the API deployment on the correct account

--- a/chart/okteto/templates/deployment-api.yaml
+++ b/chart/okteto/templates/deployment-api.yaml
@@ -18,6 +18,7 @@ spec:
         app.kubernetes.io/name: "{{ include "okteto.fullname" . }}-api"
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+      serviceAccountName: {{ include "okteto.fullname" . }}
       containers:
         - name: api
           image: "{{ .Values.images.api.repository }}:{{ .Values.images.api.tag }}"
