--- a/backend/okteto.yml
+++ b/backend/okteto.yml
@@ -4,3 +4,8 @@ workdir: /backend
 command: ["bash"]
 forward:
   - "8000:8000"
+volumes:
+  - name: go-pkg
+    path: /go/pkg/
+  - name: go-cache
+    path: /root/.cache/go-build/
