Set the cluster public endpoint as a variable

--- a/chart/okteto/templates/deployment-api.yaml
+++ b/chart/okteto/templates/deployment-api.yaml
@@ -23,6 +23,9 @@ spec:
         - name: api
           image: "{{ .Values.images.api.repository }}:{{ .Values.images.api.tag }}"
           imagePullPolicy: {{ .Values.images.pullPolicy }}
+          env:
+          - name: CLUSTER_PUBLIC_ENDPOINT
+            value: "{{ .Values.clusterPublicEndpoint }}"
           ports:
             - name: http
               containerPort: {{ .Values.services.api.port }}
