--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,9 @@
 FROM golang:1.12 as builder
 WORKDIR /app
+COPY go.mod .
+COPY go.sum .
+RUN go mod download
+
 COPY . . 
 RUN CGO_ENABLED=0 GOOS=linux go build -v -o okteto
 
