read githubid from the env

--- a/chart/okteto/templates/deployment-api.yaml
+++ b/chart/okteto/templates/deployment-api.yaml
@@ -34,10 +34,7 @@ spec:
               protocol: TCP
           env:
             - name: GITHUB_CLIENTID
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "okteto.fullname" . }}
-                  key: githubClientId
+              value: {{ .Values.githubAuth.clientId }}
             - name: GITHUB_CLIENTSECRET
               valueFrom:
                 secretKeyRef:
