--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,13 @@
 FROM node:10 as builder
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
+
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
+ENV GITHUB_CLIENTID "47867be52b46a2d9d302"
+
 COPY package.json yarn.lock ./
 RUN yarn install
+
 COPY . .
 RUN yarn run build
 
