--- a/chart/okteto/templates/custom-resources/spaces.yaml
+++ b/chart/okteto/templates/custom-resources/spaces.yaml
@@ -1,3 +1,4 @@
+{{- if (not (.Capabilities.APIVersions.Has "crd.okteto.com/v1alpha1")) }}
 {{- $serviceName := include "okteto.fullname" . -}}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -16,3 +17,4 @@ spec:
     plural: spaces
     singular: space
     kind: Space
+{{- end }}
