Support for public endpoints (#21)
* Support for public endpoints

--- a/chart/okteto/templates/deployment-api.yaml
+++ b/chart/okteto/templates/deployment-api.yaml
@@ -30,6 +30,8 @@ spec:
               containerPort: {{ .Values.services.api.port }}
               protocol: TCP
           env:
+            - name: OKTETO_BASE_DOMAIN
+              value: "{{ .Values.oktetoBaseDomain }}"
             - name: CLUSTER_PUBLIC_ENDPOINT
               value: "{{ .Values.clusterPublicEndpoint }}"
             - name: GITHUB_CLIENTID
