add healthz endpoint to ingress and webpack (#40)
* enable healthchecks and replicas

* add healthz endpoint to ingress and webpack

* 2 replicas by default for prod

--- a/chart/okteto/templates/deployment-api.yaml
+++ b/chart/okteto/templates/deployment-api.yaml
@@ -21,6 +21,7 @@ spec:
         checksum/secrets: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
     spec:
       serviceAccountName: {{ include "okteto.fullname" . }}
+      replicas: {{ .Values.replicas }}
       containers:
         - name: api
           image: "{{ .Values.images.api.repository }}:{{ .Values.images.api.tag }}"
@@ -43,5 +44,17 @@ spec:
                 secretKeyRef:
                   name: {{ include "okteto.fullname" . }}
                   key: githubClientSecret
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: {{ .Values.services.api.port }}
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: {{ .Values.services.api.port }}
+            initialDelaySeconds: 5
+            periodSeconds: 5
           resources:
 {{ toYaml .Values.resources.api | indent 12 }}
