--- a/chart/okteto/templates/ingress.yaml
+++ b/chart/okteto/templates/ingress.yaml
@@ -30,6 +30,10 @@ spec:
     - host: {{ . | quote }}
       http:
         paths:
+          - path: "/healthz"
+            backend:
+              serviceName: api
+              servicePort: {{ $root.Values.services.api.port }}
           - path: "/github"
             backend:
               serviceName: api
