fix ci config (#51)
* fix ci config

* publish to s3 bucket

--- a/api/Makefile
+++ b/api/Makefile
@@ -1,3 +1,9 @@
+BINDIR    := $(CURDIR)/bin
+
+.PHONY: build
+build:
+	go build -o "bin/okteto-api-$(label)" 
+
 .PHONY: push
 push:
 	docker push gcr.io/free-tier-219708/api
