--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+version: 2.1
+orbs:
+  aws-s3: circleci/aws-s3@1.0.6
 jobs:
   build-cli:
     docker:
@@ -24,26 +26,68 @@ jobs:
       - checkout
       - attach_workspace:
           at: ./artifacts
-      - run:
-          name: "Publish CLI Release"
-          command: |
-            echo "$CIRCLE_TAG code release goes here"
+      - aws-s3/sync:
+          from: ./artifacts/bin
+          to: "s3://downloads.okteto.com/cloud/cli"
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws-region: AWS_REGION
+          arguments: |
+            --acl public-read \
+            --metadata version=${CIRCLE_TAG}
+            --cache-control "max-age=86400"
+          overwrite: true
+      - aws-s3/sync:
+          from: ./artifacts/bin
+          to: "s3://downloads.okteto.com/cloud/cli/${CIRCLE_TAG}"
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws-region: AWS_REGION
+          arguments: |
+            --acl public-read \
+            --metadata version=${CIRCLE_TAG}
+            --cache-control "max-age=86400"
+          overwrite: false
+            
   build-api:
     docker:
-      - image: docker:latest
+      - image: circleci/golang:1.12
     steps:
       - checkout
       - run:
-          command: docker build -t api .
+          command: make build
           working_directory: api
+
+      - persist_to_workspace:
+          root: api
+          paths:
+            - bin
+
+      - store_artifacts:
+          path: api/bin
+          destination: binaries
   build-frontend:
     docker:
-      - image: docker:latest
+      - image: circleci/node:10
+    environment:
+      - GITHUB_CLIENTID: "47867be52b46a2d9d302"
     steps:
       - checkout
       - run:
-          command: docker build -t frontend .
+          command: yarn install
           working_directory: frontend
+      - run:
+          command: yarn build
+          working_directory: frontend
+
+      - persist_to_workspace:
+          root: frontend
+          paths:
+            - dist
+
+      - store_artifacts:
+          path: frontend/dist
+          destination: dist
 workflows:
   version: 2
   test:
@@ -66,8 +110,13 @@ workflows:
           filters:
             tags:
               only: /^\d+\.\d+\.\d+$/
+            branches:
+              ignore: /.*/
       - publish-cli:
-          requires: build-cli
+          requires: 
+            - build-cli
           filters:
             tags:
               only: /^\d+\.\d+\.\d+$/
+            branches:
+              ignore: /.*/
