--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ ENV PATH /usr/src/app/node_modules/.bin:$PATH
 ENV GITHUB_CLIENTID "47867be52b46a2d9d302"
 
 COPY package.json yarn.lock ./
-RUN yarn install
+RUN yarn install --frozen-lockfile
 
 COPY . .
 RUN yarn run build
