don't check the API from the frontend (#55)

--- a/chart/okteto/templates/deployment-frontend.yaml
+++ b/chart/okteto/templates/deployment-frontend.yaml
@@ -38,7 +38,7 @@ spec:
             periodSeconds: 5
           readinessProbe:
             httpGet:
-              path: /api/healthz
+              path: /index.html
               port: {{ .Values.services.frontend.port }}
             initialDelaySeconds: 5
             periodSeconds: 5
