--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,31 +47,17 @@
   },
   "dependencies": {
     "@sentry/browser": "4.3.2",
-    "anser": "^1.4.6",
     "autobind-decorator": "^2.1.0",
     "classnames": "^2.2.5",
     "clipboard-polyfill": "^2.7.0",
-    "codemirror": "^5.40.2",
     "dom-css": "^2.1.0",
-    "escape-string-regexp": "^1.0.5",
-    "haikunator": "^2.0.0",
-    "js-yaml": "^3.12.0",
-    "lodash.get": "^4.4.2",
-    "lodash.has": "^4.5.2",
-    "lodash.set": "^4.3.2",
-    "lodash.throttle": "^4.1.1",
-    "lodash.unset": "^4.5.2",
-    "mixpanel-browser": "^2.23.0",
+    "mixpanel-browser": "^2.27.1",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.14",
-    "omit-empty": "^0.4.1",
-    "once": "^1.4.0",
-    "prop-types": "^15.6.1",
-    "querystring": "^0.2.0",
+    "prop-types": "^15.7.2",
     "rc-switch": "1.8.0",
     "react": "^16.6.0",
     "react-checkbox-group": "^4.0.1",
-    "react-codemirror2": "5.1.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.6.0",
     "react-favicon": "^0.0.14",
@@ -85,11 +71,10 @@
     "react-skylight": "^0.5.1",
     "react-toastify": "4.4.0",
     "react-transition-group": "2.5.0",
-    "react-typeahead": "^2.0.0-alpha.8",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "smoothscroll-polyfill": "^0.4.3",
-    "socket.io-client": "^2.2.0",
+    "universal-ga": "^1.2.0",
     "webpack-merge": "4.1.4",
     "whatwg-fetch": "3.0.0"
   }
