don't delete existing versions (#73)
* move users outside of the helm chart

* don't delete existing versions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
             --acl public-read \
             --metadata version=${CIRCLE_TAG} \
             --cache-control "max-age=86400" \
-          overwrite: true
+            --exclude "*.*.*/" \
       - aws-s3/sync:
           from: ./artifacts/bin
           to: "s3://downloads.okteto.com/cloud/cli/${CIRCLE_TAG}"
