Colorize the output (#75)
display endpoint information on up

--- a/api/okteto.yml
+++ b/api/okteto.yml
@@ -4,6 +4,9 @@ workdir: /app
 command: ["bash"]
 forward:
   - "8000:8000"
+resources:
+  requests:
+    cpu: "500m"
 volumes:
   - name: go-pkg
     path: /go/pkg/
