Add 'okteto login' step on UI hints (#77)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "1.0.0",
+    "css-loader": "2.1.1",
     "dynamic-cdn-webpack-plugin": "^4.0.0",
     "empty": "^0.10.1",
     "eslint": "5.6.1",
@@ -29,7 +29,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "7.11.1",
-    "fast-sass-loader": "1.4.6",
+    "fast-sass-loader": "1.4.7",
     "file-loader": "2.0.0",
     "handlebars": "4.0.12",
     "handlebars-loader": "^1.7.0",
@@ -38,11 +38,12 @@
     "node-sass": "4.9.3",
     "postcss-loader": "3.0.0",
     "prettier": "1.14.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
     "url-loader": "1.1.1",
-    "webpack": "4.29.6",
+    "webpack": "4.30.0",
     "webpack-bundle-analyzer": "3.0.2",
-    "webpack-cli": "3.1.2",
+    "webpack-cli": "3.3.0",
     "webpack-dev-server": "^3.3.0"
   },
   "dependencies": {
@@ -70,7 +71,7 @@
     "react-router-dom": "^4.2.2",
     "react-select": "2.4.2",
     "react-skylight": "^0.5.1",
-    "react-toastify": "4.4.0",
+    "react-toastify": "4.5.2",
     "react-transition-group": "2.5.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
