trim auth token (#88)
* trim auth token

--- a/api/Makefile
+++ b/api/Makefile
@@ -2,7 +2,7 @@ BINDIR    := $(CURDIR)/bin
 
 .PHONY: build
 build:
-	go build -o "bin/okteto-api-$(label)" 
+	go build -o "bin/okteto-api" 
 
 .PHONY: push
 push:
