Speed up api builds with buildkit cache (#124)

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,10 +1,16 @@
+# syntax = docker/dockerfile:experimental
+
 FROM golang:1.12 as builder
+
 WORKDIR /app
+
+ENV GO111MODULE=on
 COPY go.mod .
 COPY go.sum .
 RUN go mod download
+
 COPY . . 
-RUN CGO_ENABLED=0 GOOS=linux go build -o okteto
+RUN --mount=type=cache,target=/root/.cache/go-build CGO_ENABLED=0 GOOS=linux go build -o okteto
 
 FROM alpine
 RUN apk update \
