--- a/api/Makefile
+++ b/api/Makefile
@@ -10,7 +10,7 @@ push:
 
 .PHONY: docker
 docker:
-	docker build -t gcr.io/free-tier-219708/api .
+	DOCKER_BUILDKIT=1 docker build -t gcr.io/free-tier-219708/api .
 
 .PHONY: start
 start:
