Multi space UI (#149)
* UI support for development mode and active user

* Fix aligment and other issues

* Space list layout

* Styled list of spaces

* Improved environments list with grid layout

* Space actions

* Create space dialog

* Share component

* Fix icon issues

* Github based avatar component

* Share button

* Share space dialog from the space itself

* Space delete dialog

* New layout to add resource

* Fix modal issues and text alignment

* Menu component

* Temporarily discard menu component due to issues

* Small aligment issues

* Quick improvements

* Early support of space state and reducer

* Updated graphql queries

* Fix multispaces issues

* Simplify graphql queries

* Share spaces with new members

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "prop-types": "^15.7.2",
     "rc-switch": "1.8.0",
     "react": "^16.6.0",
+    "react-avatar": "^3.6.0",
     "react-checkbox-group": "^4.0.1",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.6.0",
@@ -71,6 +72,7 @@
     "react-router-dom": "^4.2.2",
     "react-select": "2.4.2",
     "react-skylight": "^0.5.1",
+    "react-tether": "^2.0.2",
     "react-toastify": "4.5.2",
     "react-transition-group": "2.5.0",
     "redux": "^4.0.0",
