--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,9 @@
     "classnames": "^2.2.5",
     "clipboard-polyfill": "^2.7.0",
     "dom-css": "^2.1.0",
+    "graphql-request": "^1.8.2",
     "is-windows": "^1.0.2",
+    "lodash.throttle": "^4.1.1",
     "mixpanel-browser": "^2.27.1",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.14",
