--- a/chart/okteto/templates/daemon-inotify.yaml
+++ b/chart/okteto/templates/daemon-inotify.yaml
@@ -19,6 +19,7 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       terminationGracePeriodSeconds: 0
+      serviceAccountName: {{ include "okteto.fullname" . }}
       containers:
         - name: inotify
           image: busybox:latest
