--- a/chart/okteto/templates/deployment-frontend.yaml
+++ b/chart/okteto/templates/deployment-frontend.yaml
@@ -19,6 +19,7 @@ spec:
         app.kubernetes.io/name: "{{ include "okteto.fullname" . }}-frontend"
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+      serviceAccountName: {{ include "okteto.fullname" . }}
       containers:
         - name: frontend
           image: "{{ .Values.images.frontend.repository }}:{{ .Values.images.frontend.tag }}"
