--- a/custom-error-pages/deployment/deployment.yaml
+++ b/custom-error-pages/deployment/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: default-http-backend
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: default-http-backend
@@ -14,6 +14,7 @@ spec:
       labels:
         app: default-http-backend
     spec:
+      serviceAccount: nginx-ingress-serviceaccount
       containers:
       - name: custom-error-pages
         image: okteto/custom-error-pages
