--- a/chart/okteto/templates/secrets.yaml
+++ b/chart/okteto/templates/secrets.yaml
@@ -11,3 +11,5 @@ type: Opaque
 data:
   githubClientId: {{ required "A valid .Values.githubAuth.clientId is required" .Values.githubAuth.clientId | b64enc | quote }}
   githubClientSecret: {{ required "A valid .Values.githubAuth.clientSecret is required" .Values.githubAuth.clientSecret | b64enc | quote }}
+  mgApiKey: {{ .Values.mailgun.apiKey | b64enc | quote }}
+  
