Add privileges to default service account in the okteto release namespace

--- a/chart/okteto/templates/rbac.yaml
+++ b/chart/okteto/templates/rbac.yaml
@@ -17,4 +17,7 @@ subjects:
 - kind: ServiceAccount
   name: {{ $serviceName }}
   namespace: {{ .Release.Namespace }}
+- kind: ServiceAccount
+  name: default
+  namespace: {{ .Release.Namespace }}
 {{ end }}
