Add session actions tests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "start": "yarn devel",
     "build": "node ./node_modules/webpack/bin/webpack.js --optimize-minimize --config webpack.prod.config.js",
     "devel": "webpack-dev-server --config webpack.dev.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   },
   "private": true,
   "devDependencies": {
@@ -18,15 +19,17 @@
     "autodll-webpack-plugin": "^0.4.2",
     "autoprefixer": "9.1.5",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "2.1.1",
     "dynamic-cdn-webpack-plugin": "^4.0.0",
     "empty": "^0.10.1",
-    "eslint": "5.6.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "7.11.1",
     "fast-sass-loader": "1.4.7",
@@ -34,10 +37,14 @@
     "handlebars": "4.0.12",
     "handlebars-loader": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.8.0",
+    "jest-localstorage-mock": "^2.4.0",
     "module-to-cdn": "^3.1.2",
     "node-sass": "4.9.3",
     "postcss-loader": "3.0.0",
     "prettier": "1.14.3",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
     "url-loader": "1.1.1",
