Human readable namespaces (#203)
* Dynamic input to enter namespace with suffix

* Add hint in create space

* Proper hint styles

* Fix issue with environment code inputs

* Change space > namespace

* Update explorer to show namespaces id

* Resizable explorer to allow view long namespaces

* Remove unused dependency

* Remove references to name and use id field instead

* Human readable namespaces

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "moment-timezone": "^0.5.14",
     "prop-types": "^15.7.2",
     "rc-switch": "1.8.0",
+    "re-resizable": "^4.11.0",
     "react": "^16.6.0",
     "react-avatar": "^3.6.0",
     "react-checkbox-group": "^4.0.1",
@@ -76,6 +77,7 @@
     "react-favicon": "^0.0.14",
     "react-github-login": "git://github.com/rlamana/react-github-login#popup-size-position",
     "react-hot-loader": "4.3.11",
+    "react-input-autosize": "^2.2.1",
     "react-moment": "0.8.1",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
