--- a/chart/okteto/Chart.yaml
+++ b/chart/okteto/Chart.yaml
@@ -2,4 +2,5 @@ apiVersion: v1
 appVersion: 1.0.1
 description: A Helm chart for Kubernetes
 name: okteto
-version: 0.1.0
+version: 0.2.0
+icon: https://okteto.com/cloud/getting-started/images/okteto-logo.svg
